[package]
name = "blog"
version = "0.1.0"
authors = ["胡青杨 <i@do.codes>"]

[dependencies]
actix = "0.5"
actix-web = "0.5"
bson = "0.10.0"
mongodb = "0.3.7"
dotenv = "0.9.0"
futures = "0.2.1"
serde_derive = "1.0.44"
serde = "1.0.44"
serde_json = "1.0.17"
chrono = { version = "0.4", features = ["serde"] }
