[package]
name = "blog"
version = "0.1.0"
authors = ["胡青杨 <i@do.codes>"]

[dependencies]
listenfd = "0.3"
actix = "0.5"
actix-web = "0.5"
bson = "0.12"
mongodb = "0.3.7"
dotenv = "0.9.0"
futures = "0.1.23"
serde_derive = "1.0.44"
serde = "1.0.44"
serde_json = "1.0.17"
chrono = { version = "0.4", features = ["serde"] }
